✨ Prevent making new lines when overflows

--- a/src/ToDoList.css
+++ b/src/ToDoList.css
@@ -4,6 +4,7 @@
 }
 .todolist-content{
     display: flex;
+    white-space: nowrap;
     justify-content: space-between;
 }
 .todolist-content-text{
